# SVT-VP9

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  NOTICES.md  README.md  STYLE.md  appveyor.yml
.github/workflows/: build.yml
Config/: Sample.cfg
Docs/: svt-vp9_encoder_user_guide.md
Source/API/: EbApi.h  EbApi.version  EbApiVersion.h.in  EbErrorCodes.h  EbExport_List  EbSvtVp9Enc.h  EbSvtVp9ErrorCodes.h  EbSvtVp9Time.h  EbTime.h
Source/App/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppContext.c  EbAppContext.h  EbAppFifo.c  EbAppMain.c  EbAppProcessCmd.c  EbAppTime.c  EbAppTime.h  EbTime.c
Source/Lib/: CMakeLists.txt  pkg-config.pc.in
Source/Lib/ASM_AVX2/: CMakeLists.txt  EbAvcStyleMcp_AVX2.h  EbAvcStyleMcp_Intrinsic_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.c  EbCombinedAveragingSAD_Intrinsic_AVX2.h  EbCombinedAveragingSAD_Intrinsic_AVX512.c  EbCombinedAveragingSAD_Intrinsic_AVX512.h  EbComputeSAD_AVX2.h  EbComputeSAD_Intrinsic_AVX2.c  EbComputeSAD_SadLoopKernel_AVX512.c  EbComputeSAD_SadLoopKernel_AVX512.h  EbFdct_Intrinsic_AVX2.c  EbIdct_Intrinsic_AVX2.c  EbIntraPrediction_Intrinsic_AVX2.c  EbMemory_AVX2.h  EbNoiseExtractAVX2.c  EbNoiseExtractAVX2.h  EbPackUnPack_Intrinsic_AVX2.c  EbPackUnPack_Intrinsic_AVX2.h  EbPictureOperators_AVX2.h  EbPictureOperators_Intrinsic_AVX2.c  EbTransforms_AVX2.h  EbTranspose_AVX2.h  fwd_dct32x32_impl_avx2.c  loopfilter_avx2.c  quantize_avx.c  vpx_subpixel_8t_intrin_avx2.c
Source/Lib/ASM_SSE2/: CMakeLists.txt  EbAvcStyleMcp_Intrinsic_SSE2.c  EbAvcStyleMcp_SSE2.h  EbCombinedAveragingSAD_Intrinsic_SSE2.c  EbComputeMean_Intrinsic_SSE2.c  EbComputeMean_SSE2.h  EbComputeSAD_SSE2.h  EbIntrinMacros16bit_SSE2.h  EbIntrinMacros_SSE2.h  EbMcp_SSE2.h  EbMeSadCalculation_Intrinsic_SSE2.c  EbMeSadCalculation_SSE2.h  EbPackUnPack_Intrinsic_SSE2.c  EbPackUnPack_SSE2.h  EbPictureOperators_Intrinsic_SSE2.c  EbPictureOperators_SSE2.asm  EbPictureOperators_SSE2.h  fwd_txfm_sse2.h  intrapred_sse2.asm  inv_txfm_sse2.c  inv_txfm_sse2.h  loopfilter_sse2.c  mem_sse2.h  subtract_sse2.asm  transpose_sse2.h  txfm_common_sse2.h  vp9_dct_intrin_sse2.c  vp9_idct_intrin_sse2.c  x64Macro.asm  x64RegisterUtil.asm  x64inc.asm  x86inc.asm
Source/Lib/ASM_SSE4_1/: CMakeLists.txt  EbComputeSAD_Intrinsic_SSE4_1.c  EbComputeSAD_SSE4_1.h  EbPictureOperators_Intrinsic_SSE4_1.c  EbPictureOperators_SSE4_1.h
Source/Lib/ASM_SSSE3/: CMakeLists.txt  EbAvcStyleMcp_SSSE3.h  EbIntraPrediction_Intrinsic_SSSE3.c  intrapred_ssse3.asm  inv_txfm_ssse3.c  inv_txfm_ssse3.h  vpx_subpixel_8t_ssse3.asm  vpx_subpixel_bilinear_ssse3.asm  x86_abi_support.asm
Source/Lib/C_DEFAULT/: CMakeLists.txt  EbAvcStyleMcp_C.c  EbAvcStyleMcp_C.h  EbComputeMean_C.c  EbComputeMean_C.h  EbComputeSAD_C.c  EbComputeSAD_C.h  EbMeSadCalculation_C.c  EbMeSadCalculation_C.h  EbPackUnPack_C.c  EbPackUnPack_C.h  EbPictureOperators_C.c  EbPictureOperators_C.h
Source/Lib/Codec/: CMakeLists.txt  EbApiSei.h  EbAvcStyleMcp.c  EbAvcStyleMcp.h  EbBitstreamUnit.c  EbBitstreamUnit.h  EbCodingUnit.c  EbCodingUnit.h  EbComputeMean.h  EbComputeSAD.h  EbDefinitions.h  EbEncDecProcess.c  EbEncDecProcess.h  EbEncDecResults.c  EbEncDecResults.h  EbEncDecSegments.c  EbEncDecSegments.h  EbEncDecTasks.c  EbEncDecTasks.h  EbEncHandle.c  EbEncHandle.h  EbEncodeContext.c  EbEncodeContext.h  EbEntropyCoding.c  EbEntropyCoding.h  EbEntropyCodingObject.h  EbEntropyCodingProcess.c  EbEntropyCodingProcess.h  EbEntropyCodingResults.c  EbEntropyCodingResults.h  EbInitialRateControlProcess.c  EbInitialRateControlProcess.h  EbInitialRateControlReorderQueue.c  EbInitialRateControlReorderQueue.h  EbInitialRateControlResults.c  EbInitialRateControlResults.h  EbIntraPrediction.c  EbIntraPrediction.h  EbMcp.c  EbMcp.h  (+83 more)
Source/Lib/VPX/: CMakeLists.txt  bitops.h  bitwriter.c  bitwriter.h  bitwriter_buffer.c  bitwriter_buffer.h  convolve.h  fwd_txfm.c  fwd_txfm.h  intrapred.c  inv_txfm.c  inv_txfm.h  loopfilter.c  mem.h  mem_ops.h  mem_ops_aligned.h  prob.c  prob.h  psnr.c  psnr.h  quantize.c  subtract.c  tools_common.h  txfm_common.h  vp9_alloccommon.c  vp9_alloccommon.h  vp9_bitstream.c  vp9_bitstream.h  vp9_block.h  vp9_blockd.c  vp9_blockd.h  vp9_common.h  vp9_common_data.c  vp9_common_data.h  vp9_context_tree.c  vp9_context_tree.h  vp9_cost.c  vp9_cost.h  vp9_dct.c  vp9_encodemv.c  (+70 more)
ffmpeg_plugin/: 0001-Add-ability-for-ffmpeg-to-run-svt-vp9-with-hevc-av1.patch  0001-Add-ability-for-ffmpeg-to-run-svt-vp9-with-svt-hevc-av1.patch  0001-Add-ability-for-ffmpeg-to-run-svt-vp9.patch  README.md  master-0001-Add-ability-for-ffmpeg-to-run-svt-vp9-with-hevc-av1.patch  master-0001-Add-ability-for-ffmpeg-to-run-svt-vp9.patch  n4.2.3-0001-Add-ability-for-ffmpeg-to-run-svt-vp9-with-hevc-av1.patch  n4.2.3-0001-Add-ability-for-ffmpeg-to-run-svt-vp9.patch  n4.3.1-0001-Add-ability-for-ffmpeg-to-run-svt-vp9.patch
gstreamer-plugin/: CMakeLists.txt  README.md  gstsvtvp9enc.c  gstsvtvp9enc.h  meson.build
